competitions: Fix sort box alignment

--- a/src/pages/competitions/competitions-grid/index.scss
+++ b/src/pages/competitions/competitions-grid/index.scss
@@ -2,15 +2,16 @@
 @import '../../../sass/mixins';
 
 .competition-grid {
+  padding: 0 6vw;
+
   .sort-filter-box {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: right;
-    padding-right: 14vw;
+    padding: 1.5rem 0;
     gap: 1rem;
 
     @include mobile-view {
-      padding: 0;
       grid-template-columns: auto;
       grid-template-rows: auto auto;
       justify-content: center;
@@ -44,7 +45,7 @@
     gap: 3rem;
 
     text-align: center;
-    padding: 2rem 14vw;
+    padding: 2rem auto;
 
     @include mobile-view {
       grid-template-columns: repeat(1, 1fr);
